Improve matching logic and tests to cover these cases